[V8] Pass Isolate to GetNamedProperty() https://bugs.webkit.org/show_bug.cgi?id=84277

Reviewed by Nate Chapin.

The objective is to pass Isolate around in V8 bindings.
This patch passes Isolate to GetNamedProperty().

(GenerateHeader):
* bindings/v8/V8DOMWindowShell.cpp:
(WebCore::getter):
* bindings/v8/custom/V8HTMLDocumentCustom.cpp:
(WebCore::V8HTMLDocument::GetNamedProperty):
(WebCore::V8HTMLDocument::allAccessorGetter):


Canonical link: https://commits.webkit.org/102159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114996 268f45cc-cd09-0410-ab3c-d52691b4dbfc